fixed menu modal spacing

--- a/frontend/src/components/universalModals/SVGs/SVGs.css
+++ b/frontend/src/components/universalModals/SVGs/SVGs.css
@@ -1,7 +1,6 @@
 .svg-size{
     height:20px;
     width: 20px;
-    margin-right:25px;
 }
 
 .group-order-svg{
